2002-11-04  Tim Musson <trmusson@ihug.co.nz>

	* x11-gtk.cc:
	* UI.cc:
	* x11.h:
	* Game.h: Switched to a GNOME About dialog.  Quit and New game
	dialogs are now alert dialogs. They now work if the main window's
	"close" button is used, and now only appear if there's a game in
	progress. This fixes #97318.

2002-11-11  Ross Burton  <ross@burtonini.com>

	* xbill.png: New icon contributed by Timothy Musson.

2002-08-02  Ross Burton  <ross@burtonini.com>

	* x11-gtk.cc: Remove the body of CreateDialog and simply call
	CreateDialogIcon. Not sure why there are two almost identical
	methods... This ends up fixing #89443, inspired by a patch from
	Samuel Stringham.
	XBill needs major UI love, which is probably due to the fact that
	it wouldn't build until recently.

2002-06-09  Juan Pablo Mendoza <jpablo@gnome.org>

	* MCursor.cc, Picture.cc: Find files at the correct
	  location.

2002-06-02  Bastien Nocera  <hadess@hadess.net>

	* UI.cc:
	* x11-gtk.cc: Added help, and cleaned up the dialogs a bit more
	(you'll need the patch attached to bug #83916)

2002-05-26  Chris Lyttle <chris@wilddev.net>

	* help/C/Makefile.am: updated for docs move
	* help/C/gnome-xbill-C.omf: delete for docs move
	* help/C/gnome-xbill.xml: delete for docs move
	* help/C/gnome-xbill-C.omf: added for docs move
	* help/C/gnome-xbill.xml: added for docs move
	
2002-05-05  Chris Lyttle <chris@wilddev.net>

	* help/C/Makefile.am: updated for new format of SK 0.3.8.
	* help/C/gnome-xbill-C.omf: updated for new format of SK 0.3.8.
	
2002-04-19  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* UI.cc: ported to gnome2 proper, whee !

2002-04-16  Bastien Nocera  <hadess@hadess.net>

	* x11-gtk.cc:
	* x11.h: check the return values of the dialogs before taking action

2002-04-16  Bastien Nocera  <hadess@hadess.net>

	* MCursor.cc:
	* Makefile.am:
	* Picture.cc:
	* UI.cc:
	* x11-gtk.cc:
	* x11.h: ported the whole lot to gnome2, no GDK_DISABLE_DEPRECATED