@@ -1,3 +1,12 @@
+2002-11-20  Jeremy Browne  <jeremy@synonymous.ca>
+
+	* x11-gtk.cc: Trivial changes to new game / quit dialog strings to
+	match those of the other parts of the gnome-games package. (Bug #97321)
+
+2002-11-18  Fernando Herrera <fherrera@onirica.com>
+
+	* xbill.desktop.in: add X-GNOME-BUGZILLA stuff
+
 2002-11-04  Tim Musson <trmusson@ihug.co.nz>
 
 	* x11-gtk.cc:
